# cpp-server-experiments

./: .gitignore  README.md  info.txt  mac_test_boost_beast_server  simple_server  simple_server.cpp  test_boost_beast_server.cpp  test_boost_beast_server_2.cpp  test_server_uwebsocket.cpp
boost-beast-server-testing/: simple2_boost_beast_server.cpp  simple_boost_beast_server.cpp
boost-beast-server-testing/v1/: simple_boost_beast_client.cpp  simple_boost_beast_server.cpp
boost-beast-server-testing/v2/: CMakeLists.txt  client.cpp  server.cpp
cmake-testing/: CMakeLists.txt  main.cpp
executables-linux/: test_boost_beast_server
executables_mac/: mac_simple_server
practice/: mac_test_2  test  test.cpp  test_2  test_2.cpp  test_socket  test_socket_server.cpp
test-server/: test_boost_beast_server.cpp  websocket_server.cpp
